crates/fig-lexer/tests/snapshots/integration_tests__interfaces__effect_methods.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Interface
- Ident: Allocator
- Newline
- Indent
- Func
- Bang
- Ident: allocate
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: size
- Colon
- USize
- RParen
- Arrow
- Star
- Mut
- U8
- Newline
- Func
- Bang
- Ident: deallocate
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: ptr
- Colon
- Star
- Mut
- U8
- RParen
- Arrow
- OkLiteral
- Newline
- Func
- Bang
- Ident: reallocate
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: ptr
- Colon
- Star
- Mut
- U8
- Comma
- Ident: size
- Colon
- USize
- RParen
- Arrow
- Star
- Mut
- U8
- Newline
- Dedent
