crates/fig-lexer/tests/snapshots/integration_tests__interfaces__empty.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Interface
- Ident: Marker
- Newline
