crates/fig-lexer/tests/snapshots/integration_tests__interfaces__multiple_methods.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Interface
- Ident: Display
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Func
- Ident: display
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Ident: T
- Newline
- Func
- Ident: to_string
- LParen
- Star
- SelfLower
- RParen
- Arrow
- LBracket
- U8
- RBracket
- Newline
- Func
- Ident: format
- LParen
- Star
- SelfLower
- Comma
- Ident: fmt
- Colon
- LBracket
- U8
- RBracket
- RParen
- Arrow
- LBracket
- U8
- RBracket
- Newline
- Dedent
