crates/fig-lexer/tests/snapshots/integration_tests__interfaces__visibility_generic.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Public
- Interface
- Ident: Iterator
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Func
- Ident: next
- LParen
- Star
- Mut
- SelfLower
- RParen
- Arrow
- Question
- Ident: T
- Newline
- Func
- Ident: has_next
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Bool
- Newline
- Dedent
- Export
- Interface
- Ident: Collection
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Func
- Ident: len
- LParen
- Star
- SelfLower
- RParen
- Arrow
- USize
- Newline
- Func
- Ident: is_empty
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Bool
- Newline
- Func
- Ident: iter
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Ident: Iterator
- LBracket
- Ident: T
- RBracket
- Newline
- Dedent
